--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "name": "QUEEN_ANITA-V2",
   "description": "QUEEN_ANITA-V2 a simple WhatsAppp Bot",
-  "logo": "https://telegra.ph/file/a22200a780671e0e32383.jpg",
-  "keywords": "Anita-V2",
+  "logo": "https://graph.org/file/94f34841f722b1b2e43a0.jpg",
+  "keywords": "SABAN-V2",
   "success_url": "/Asta/",
   "app_url": "/qr/",
 
@@ -28,30 +28,30 @@
     },
     "OWNER_NAME": {
       "description": "Owner Name",
-      "value": "David Cyril",
+      "value": "AHMED SABAN",
       "required": true
     },
 
     "WELCOME": {
       "description": "Welcome Message",
       "value": "true",
-      "required": false
+      "required": true
     },
 
     "GOODBYE": {
       "description": "Goodbye Message",
       "value": "false",
-      "required": false
+      "required": true
     },
     "BOT_NAME": {
       "description": "Bot Name",
       "required": false,
-      "value": "QUEEN_ANITA-V2"
+      "value": "SABAN_BOT-V2"
     },
     "USER_IMAGES": {
       "description": "Image for bot",
       "required": false,
-      "value": "https://telegra.ph/file/7275967ae7b5283fada69.jpg,https://telegra.ph/file/c3049cd3ac77f371e119e.jpg,https://telegra.ph/file/a22200a780671e0e32383.jpg,https://telegra.ph/file/85fe388fdd14930cf86a0.jpg,https://telegra.ph/file/ba9ced500f9eca7db8acb.mp4"
+      "value": "https://graph.org/file/94f34841f722b1b2e43a0.jpg,https://graph.org/file/ca5afaabf4a5523220e7a.jpg,https://graph.org/file/3ef069b054b5813f3a4cc.jpg,https://graph.org/file/7cc16c1bc174143610945.jpg,https://graph.org/file/f8d29f39b30f6c116636f.jpg"
     },
     "TZ": {
       "description": "Don't change if you dont know your location.",
@@ -104,7 +104,7 @@
     },
     "OWNER_NUMBER": {
       "description": "Owner number or sudo",
-      "value": "2349066528353,2347043759577"
+      "value": "212621469696"
     },
     "OPENAI_API_KEY": {
       "description": "put your OPENAI api key here.Get it from beta.openai.com ",
@@ -123,16 +123,16 @@
     },
     "MODE": {
       "description": "public or private",
-      "value": "private"
+      "value": "public"
     },
     "PACK_NAME": {
       "description": "Put Sticker Pack_Name.",
-      "value": "QUEEN_ANITA-V2",
+      "value": "SABAN_BOT-V2",
       "required": false
     },
     "PACK_AUTHER": {
       "description": "Put Sticker Author_Name.",
-      "value": "",
+      "value": "SABAN_BOT-V2",
       "required": false
     }
   },
