--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "QUEEN_ANITA-V2",
-  "description": "QUEEN_ANITA-V2 a simple WhatsAppp Bot",
+  "name": "SABAN_BOT-V2",
+  "description": "SABAN_BOT-V2 a simple WhatsAppp Bot",
   "logo": "https://graph.org/file/94f34841f722b1b2e43a0.jpg",
   "keywords": "SABAN-V2",
   "success_url": "/Asta/",
